--- a/product-cards/package.json
+++ b/product-cards/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-svg-loader": "^4.0.0",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.7.14"
   }
 }
