--- a/product-cards/package.json
+++ b/product-cards/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.64.2",
     "vite": "^4.4.5",
     "vite-svg-loader": "^4.0.0",
     "vue-svg-loader": "^0.16.0",
